tests/e2e/neutron/httproute/04-patch-remove-gateway.yaml
# SPDX-FileCopyrightText: Copyright 2026 SAP SE or an SAP affiliate company
#
# SPDX-License-Identifier: Apache-2.0

# Patch: unset spec.gateway so the operator deletes the HTTPRoute.
apiVersion: neutron.openstack.c5c3.io/v1alpha1
kind: Neutron
metadata:
  name: neutron-route
  namespace: openstack
spec:
  gateway: null
